--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "check for IP address or domain",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "cornelia",
   "license": "ISC",
