--- a/.github/workflows/setEnvVar.yml
+++ b/.github/workflows/setEnvVar.yml
@@ -14,5 +14,5 @@ jobs:
   steps: 
     -name: display custom environment variables
     run: |
-    echo: "the region is ${{env.region}}"
-    echo: "the region 2 is $region"
+    echo "the region is ${{env.region}}"
+    echo "the region 2 is $region"
