--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -1,22 +1,14 @@
+name: Create envfile
 
-name: Create .env file
-uses: SpicyPizza/create-envfile@v1.3.0
-
-
-on: [ push ]
+on: [push]
 
 jobs:
-
   create-envfile:
- 
     runs-on: ubuntu-latest
- 
+
     steps:
-    - name: Make envfile
-      uses: SpicyPizza/create-envfile@v1.3
-      with:
-        envkey_DEBUG: false
-        envkey_SECRET_KEY: ${{ secrets.API_KEY }}       
-        directory: <directory_name>
-        file_name: .env
-        fail_on_empty: false
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_SECRET_KEY: ${{ secrets.API_KEY }}
+          file_name: .env
