--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -12,3 +12,6 @@ jobs:
         with:
           envkey_SECRET_KEY: ${{ secrets.API_KEY }}
           envkey_SOME_API_KEY: '123456abcdef'
+          directory: ../
+          file_name: .env
+          fail_on_empty: false
